native/crates/specular-scene/tests/snapshots/editing__a_selected_sticky_has_handles_and_no_caret.snap
---
source: crates/specular-scene/tests/editing.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 200x200 fill=#ffe18e
canvas text "ab" 108,108 wrap=184 14/21 #1c1917 clip=100,100 200x200
screen rect 99,99 202x202 stroke=#3b82f6/1/inside
screen rect 95,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 297,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 297,297 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 95,297 8x8 fill=#ffffff stroke=#3b82f6/1/inside
