native/crates/specular-scene/tests/snapshots/editing__a_shape_label_is_edited_centred_in_its_box.snap
---
source: crates/specular-scene/tests/editing.rs
expression: app.scene_snapshot()
---
canvas polygon 200,100 300,200 200,300 100,200 fill=#b5b9c0 stroke=#464a53/2
canvas text "abc" 162,158 wrap=76 box-h=84 14/19.6 #141414 centre middle clip=150,150 100x100
screen rect 215,190 1x20 fill=#141414 clip=150,150 100x100
screen rect 99,99 202x202 stroke=#3b82f6/1/inside
