native/crates/specular-scene/tests/snapshots/editing__an_edited_sticky_draws_the_working_text_and_a_caret_and_no_handles.snap
---
source: crates/specular-scene/tests/editing.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 200x200 fill=#ffe18e
canvas text "abcd" 108,108 wrap=184 14/21 #1c1917 clip=100,100 200x200
screen rect 148,108 1x20 fill=#1c1917 clip=100,100 200x200
screen rect 99,99 202x202 stroke=#3b82f6/1/inside
