native/crates/specular-scene/tests/snapshots/editing__selected_text_is_a_rect_behind_the_glyphs_and_hides_the_caret.snap
---
source: crates/specular-scene/tests/editing.rs
expression: app.scene_snapshot()
---
canvas shadow 100,102 200x200 blur=8 fill=#00000014
canvas rect 100,100 200x200 fill=#ffe18e
canvas rect 108,108 26x20 fill=#b3d7ff clip=100,100 200x200
canvas rect 108,128 20x20 fill=#b3d7ff clip=100,100 200x200
canvas text "ab\ncd" 108,108 wrap=184 14/21 #1c1917 clip=100,100 200x200
screen rect 99,99 202x202 stroke=#3b82f6/1/inside
