native/crates/specular-scene/tests/snapshots/editing__the_caret_and_underline_keep_a_pixel_when_zoomed_out.snap
---
source: crates/specular-scene/tests/editing.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 200x200 fill=#ffe18e
canvas text "abに" 108,108 wrap=184 14/21 #1c1917 clip=100,100 200x200
screen rect 32,31 2.5x1 fill=#1c1917 clip=25,25 50x50
screen rect 35,27 1x5 fill=#1c1917 clip=25,25 50x50
screen rect 24,24 52x52 stroke=#3b82f6/1/inside
